Agrego un parrafo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
     <link rel="stylesheet" href="style.css" />
     <title>Git and GitHub</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic, ducimus
+      tenetur molestias eaque debitis sit qui iure illum nostrum odit quas
+      ratione, quia dolore esse doloribus ea sequi recusandae voluptas.
+    </p>
+  </body>
 </html>
